<resources>
    <string name="app_name">Botonera Gumer</string>
    <string name="title_activity_botones">PG FETA</string>
    <string name="hello_world">Hello world!</string>
    <string name="salvoque">Salvo que</string>
    <string name="HDP">Hijo de puta</string>
    <string name="ESTAMIERDA">Esta mierda</string>
    <string name="avances">Avanceeees</string>
    <string name="barbarian">BAR - BARIAN</string>
    <string name="batman">Batman&#8230;</string>
    <string name="botoncitos">Apretar botoncitos</string>
    <string name="sonia">Con Sonia</string>
    <string name="reload">Que es Reload?!</string>
    <string name="lego">No lego</string>
    <string name="dudo">Mmm, como lo dudo</string>
    <string name="agudo">Te das cuenta mas</string>
    <string name="fatality">FATALITY</string>
    <string name="nostalgia">Nostalgia</string>
    <string name="gambito">Gambito</string>
    <string name="gato">Gato</string>
    <string name="grosa">Grosa grosa</string>
    <string name="gumer">Gumer Argentino&#8230;</string>
    <string name="hijademil">Hija de put#@!</string>
    <string name="juego">Juego HDP!</string>
    <string name="juegodeh">Juga un juego</string>
    <string name="lagfiles">LagFiles</string>
    <string name="lapapota">La papotaa!</string>
    <string name="loros">Un milloon dolares!</string>
    <string name="mono">Tenia un mono</string>
    <string name="wii">No existe</string>
    <string name="original">Pirate Bay</string>
    <string name="papel">Put#@~!, papel Put#@!</string>
    <string name="pegar">Pegar al arquero</string>
    <string name="ponian">Ponian la papota eeh!</string>
    <string name="sale">Por la porong#@|!</string>
    <string name="boludo">Que boludo!</string>
    <string name="quiero">Quiero&#8230;</string>
    <string name="risa">Risa de Pedro</string>
    <string name="ruido">Ruido</string>
    <string name="serasera">Sera seraa</string>
    <string name="sinonimos">Sinonimos</string>
    <string name="hitman">Soy Hitman</string>
    <string name="solo">Soy solo</string>
    <string name="tatan">TA - TA - TAAN</string>
    <string name="termos">Colecciona&#8230;</string>
    <string name="hermana">Tu hermana</string>
    <string name="vieja">Tu vieja tambien</string>
    <string name="muza">Una muza</string>
    <string name="sanders">Una Sanders</string>
    <string name="cinco">Como un cinco!</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="pref_tone">RING</string>
    <string-array name="theme_colors"></string-array>
    <string name="pref_mute">Mute</string>
    <string name="pref_mute_summ">Disable all the sound in the application</string>
    <string name="pref_textsize">Text size</string>
    <string name="pref_textsize_descr">Enter text size</string>
    <string name="pref_textsize_summ">Set text size of the interface</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_descr">Pick a color</string>
    <string name="pref_theme_summ">Set the application\'s color theme</string>
    <string name="pref_tone_summ">Set ringtone</string>
    <string name="menu_settings">Settings</string>
    <string name="clear_settings">Reset settings</string>
</resources>